<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout

        android:layout_marginTop="50dp"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_height="wrap_content"
            android:hint="@string/email">

            <EditText
                android:text="@={viewModel.email}"
                android:layout_width="match_parent"
                android:id="@+id/edt_desc"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_height="wrap_content"
            android:hint="@string/password">
        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/fragment_loginregister_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@={viewModel.password}" />
        </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_loginregister_login"
                android:elevation="10dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:onClick="@{() -> viewModel.login()}"
                android:text="Login"
                android:textAllCaps="false" />

        <TextView
            android:id="@+id/fragment_loginregister_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="#00000000"
            android:textStyle="bold"
            android:textSize="20sp"
            android:onClick="@{() -> viewModel.register()}"
            android:text="@string/create_new_account"
            android:textAllCaps="false"
            android:textColor="@color/primary" />

    </LinearLayout>

    <data>

        <variable
            name="viewModel"
            type="com.peter.eisenhowermatrix.ui.auth.LoginRegisterViewModel" />
    </data>
</layout>