<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                app:cardBackgroundColor="@color/type1"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="12dp"
                android:onClick="@{()->viewModel.onType1Clicked()}"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/do_it_now"
                            android:layout_margin="30dp"
                            android:textStyle="bold"

                            android:textColor="@color/white"
                            android:textSize="25sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="30dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:text="@string/urgent_amp_important"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.counter1}"
                        android:layout_margin="30dp"
tools:text="0"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:textSize="40sp"
                        android:layout_marginRight="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginBottom="30dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                app:cardBackgroundColor="@color/type2"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="12dp"
                app:cardUseCompatPadding="true"
                android:onClick="@{()->viewModel.onType2Clicked()}">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/decide_when_to_do"
                            android:layout_margin="30dp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:textSize="25sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="30dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:text="@string/not_urgent_amp_important"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.counter2}"
                        android:layout_margin="30dp"

                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:textSize="40sp"
                        android:layout_marginRight="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginBottom="30dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="20dp"
                app:cardBackgroundColor="@color/type3"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="12dp"
                android:onClick="@{()->viewModel.onType3Clicked()}"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/delegate_it"
                            android:layout_margin="30dp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:textSize="25sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="30dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:text="@string/urgent_amp_not_important"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.counter3}"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_margin="30dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:textSize="40sp"
                        android:layout_marginRight="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginBottom="30dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                app:cardBackgroundColor="@color/type4"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="12dp"
                android:onClick="@{()->viewModel.onType4Clicked()}"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dump_it"
                            android:layout_margin="30dp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:textSize="25sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="30dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:text="@string/not_urgent_amp_not_important"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.counter4}"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_margin="30dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:textSize="40sp"
                        android:layout_marginRight="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginBottom="30dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                app:cardBackgroundColor="@color/type_undefined"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="12dp"
                android:onClick="@{()->viewModel.onTypeUndefinedClicked()}"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/assign_it"
                            android:layout_margin="30dp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:textSize="25sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="30dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:text="@string/needs_your_action"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.counterUndefined}"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_margin="30dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:textSize="40sp"
                        android:layout_marginRight="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginBottom="30dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:text="Add"
        android:onClick="@{()->viewModel.onAddClicked()}"
        android:textAllCaps="false"
        android:gravity="center"
        android:textColor="@color/white"
        app:srcCompat="@drawable/ic_launcher_background"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

    <data>
        <variable
            name="viewModel"
            type="com.peter.eisenhowermatrix.ui.main.MainViewModel" />
    </data>
</layout>